Fixes #1278: In View Dataset page, border lines are not aligned properly in tables. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1437 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -873,13 +873,17 @@ a.breadcrumb_completed:hover, a.breadcrumb_completed:active { font-family: Tahom
 
 .table_horizontal  tr td, .table_vertical tr td{
 	padding: 3px 6px;
-    border-style: solid;
-    border-left-width: 0px;
+	border-style: solid;
+	border-left-width: 0px;
 	border-right-width: 1px;
 	border-top-width:0px;
 	border-bottom-width:1px;
-    border-color: #E6E6E6;
+	border-color: #E6E6E6;
 	border-spacing:1px;
+}
+
+.table_horizontal, .table_vertical {
+	border-collapse: collapse;
 }
 
 .table_horizontal tr:first-child td, .table_vertical tr td:first-child{
